deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app

  template:
    metadata:
      labels:
        app: my-app

    spec:
      containers:
      - name: my-container
        image: asia-south1-docker.pkg.dev/qwiklabs-gcp-01-7e57302b8b6c/my-repo/my-app:v1
        ports:
        - containerPort: 8080
